# sockets

./: CMakeLists.txt  main.c
socketClient/: main  main.c
socketServer/: main.c
socketUtil/: socketutil.c  socketutil.h
